--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     // device APIs are available
     //
     function onDeviceReady() {
-         var ref = window.open('http://apache.org', '_self', 'location=yes');
+         var ref = window.open('http://www.onlinetennismanager.org', '_self', 'location=no');
          ref.addEventListener('loadstart', function(event) { alert('start: ' + event.url); });
          ref.addEventListener('loadstop', function(event) { alert('stop: ' + event.url); });
          ref.addEventListener('loaderror', function(event) { alert('error: ' + event.message); });
